# au2-tauri-boilerplate

./: .gitignore  LICENSE  README.md  global.d.ts  index.html  package-lock.json  package.json  tsconfig-build.json  tsconfig.json  vite.config.ts
src/: index.ts  my-app.html  my-app.scss  my-app.ts
src-tauri/: Cargo.toml  tauri.conf.json
